# tenstorrent-demos

./: .gitignore  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
ansible/: .ansible-lint  README.md  ansible.cfg
ansible/group_vars/: all.yml
ansible/group_vars/all/: vault.yml.example
ansible/inventories/prod/: hosts.yml
ansible/inventories/staging/: hosts.yml
ansible/playbooks/: demo.yml
cpp/: CMakeLists.txt  README.md  vcpkg.json
cpp/src/: CMakeLists.txt  demo.cpp  demo.h  main.cpp
cpp/tests/: CMakeLists.txt  test_demo.cpp
dotnet/: .editorconfig  README.md  TenstorrentDemo.sln
dotnet/src/TenstorrentDemo/: Demo.cs  Program.cs  TenstorrentDemo.csproj
dotnet/tests/TenstorrentDemo.Tests/: DemoTests.cs  GlobalUsings.cs  TenstorrentDemo.Tests.csproj
python/: README.md  pyproject.toml
python/src/tenstorrent_demo/: __init__.py  cli.py  demo.py
python/tests/: test_cli.py  test_demo.py
rules/: README.md  ci.json  dotnet.json
rules/ansible/: GUIDELINES.md  ansible.json
rules/cpp/: GUIDELINES.md  cpp.json
rules/dotnet/: GUIDELINES.md
rules/python/: GUIDELINES.md  python.json
rules/terraform/: GUIDELINES.md  terraform.json
src/installation/ansible/: README.md  site.yml
src/installation/ansible/collections/: requirements.yml
src/installation/ansible/roles/tt_drivers/defaults/: main.yml
src/installation/ansible/roles/tt_drivers/tasks/: main.yml
src/installation/ansible/roles/tt_inference_stack/defaults/: main.yml
src/installation/ansible/roles/tt_inference_stack/tasks/: main.yml
src/installation/ansible/roles/tt_model_check/defaults/: main.yml
src/installation/ansible/roles/tt_model_check/tasks/: main.yml
src/shared/cpp/: README.md
src/shared/cpp/client/: CMakeLists.txt  koyeb_tenstorrent_client.hpp
src/shared/cpp/server/: CMakeLists.txt  koyeb_tenstorrent_server.cpp
src/shared/dotnet/: KoyebTenstorrentClient.cs  KoyebTenstorrentServer.cs  Logging.cs  README.md  Tenstorrent.Shared.csproj
src/shared/java/: KoyebTenstorrentClient.java  KoyebTenstorrentServer.java  Logging.java  README.md  pom.xml
src/shared/javascript/: README.md  koyebTenstorrentClient.js  koyebTenstorrentServer.js  logging.js  package.json
src/shared/python/: README.md  __init__.py  koyeb_tenstorrent_client.py  koyeb_tenstorrent_server.py  logging_utils.py
terraform/: .checkov.yml  .tflint.hcl  README.md
terraform/environments/dev/: main.tf  outputs.tf
terraform/modules/demo/: README.md  main.tf  variables.tf
